--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "swiper": "^4.4.2",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.7",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
